[gd_scene load_steps=6 format=3 uid="uid://daomwkifh32b1"]

[ext_resource type="Script" uid="uid://b4nuh801flkt5" path="res://Scripts/game_mode_menu.gd" id="1_3ocwe"]
[ext_resource type="Texture2D" uid="uid://dhalsfjg7qsce" path="res://Assets/Fleebs_Match_Game_Mode_Menu.png" id="2_h6xiy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_3ocwe"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_h6xiy"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_haqiq"]

[node name="GameModeMenu" type="Node2D"]
script = ExtResource("1_3ocwe")

[node name="FleebsMatchGameModeMenu" type="Sprite2D" parent="."]
texture = ExtResource("2_h6xiy")
centered = false

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="Timed" type="Button" parent="."]
offset_left = 189.0
offset_top = 264.0
offset_right = 557.0
offset_bottom = 388.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_3ocwe")

[node name="Endless" type="Button" parent="."]
offset_left = 606.0
offset_top = 265.0
offset_right = 963.0
offset_bottom = 388.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_h6xiy")

[node name="Back" type="Button" parent="."]
offset_left = 319.0
offset_top = 436.0
offset_right = 848.0
offset_bottom = 562.0
theme_override_styles/normal = SubResource("StyleBoxEmpty_haqiq")

[connection signal="pressed" from="Timed" to="." method="_on_timed_pressed"]
[connection signal="pressed" from="Endless" to="." method="_on_endless_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_back_pressed"]
